[package]
name = "balsapop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
salsa = "0.16.1"
colored = "2.0.0"
derive-new = "0.5.9"
reedline = "0.13.0"
miette = { version = "5.3.0", features = ["fancy"] }
thiserror = "1.0.59"
clap = { version = "4.0.9", features = ["derive"] }
logos = "0.12.1"
regex = "1.5.4"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
pretty_assertions = "1.3.0"
rug = "1.17"
